<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SplashScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/application_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grocery_app"
            android:textSize="36sp"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/dev_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_name"
            android:textSize="30sp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/dev_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_email"
            android:autoLink="email"
            android:textSize="24sp"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/githubIcon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/github"
                android:scaleType="centerCrop"
                android:src="@drawable/github_icon"/>

            <ImageButton
                android:id="@+id/linkedInIcon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/linkedin"
                android:scaleType="centerCrop"
                android:src="@drawable/linked_in_icon"/>
        </LinearLayout>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>