<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.krayong.groceryapp.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_category_list"
            app:destination="@id/nav_category_list" />
        <action
            android:id="@+id/action_nav_home_to_nav_item_details"
            app:destination="@id/nav_item_details" />
        <action
            android:id="@+id/action_nav_home_to_nav_cart"
            app:destination="@id/nav_cart" />
    </fragment>

    <fragment
        android:id="@+id/nav_category_list"
        android:name="com.krayong.groceryapp.ui.CategoryListFragment"
        tools:layout="@layout/fragment_category_list" >
        <action
            android:id="@+id/action_nav_category_list_to_nav_item_details"
            app:destination="@id/nav_item_details" />
        <action
            android:id="@+id/action_nav_category_list_to_nav_cart"
            app:destination="@id/nav_cart" />
    </fragment>

    <fragment
        android:id="@+id/nav_item_details"
        android:name="com.krayong.groceryapp.ui.ItemDetailsFragment"
        android:label="Details"
        tools:layout="@layout/fragment_item_details" >
        <action
            android:id="@+id/action_nav_item_details_to_nav_cart"
            app:destination="@id/nav_cart" />
    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.krayong.groceryapp.ui.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.krayong.groceryapp.ui.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>